--- a/TableTime/app/src/main/res/layout/activity_homepage.xml
+++ b/TableTime/app/src/main/res/layout/activity_homepage.xml
@@ -265,6 +265,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/btnProfilePage"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginEnd="28dp"
