--- a/TableTime/app/src/main/res/layout/activity_homepage.xml
+++ b/TableTime/app/src/main/res/layout/activity_homepage.xml
@@ -47,12 +47,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonSearch"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="480dp"
         android:backgroundTint="@color/black"
-        android:text="Procurar"
+        android:text="PROCURAR"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,207 +62,6 @@
     <!-- Container 3 -->
 
     <!-- Container 4 -->
-
-    <LinearLayout
-        android:id="@+id/restaurant1Container"
-        android:layout_width="350dp"
-        android:layout_height="80dp"
-        android:background="@drawable/corners_search_view"
-        android:backgroundTint="#D8D8D8"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.428">
-
-        <!-- Conteúdo do restaurante 1 -->
-
-        <ImageView
-            android:id="@+id/restaurant1Image"
-            android:layout_width="130dp"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/restaurante1" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="8dp">
-
-            <TextView
-                android:id="@+id/restaurant1Name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="La Maison"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/restaurant1Rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4.3"
-                android:textColor="#FFC107"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/restaurant2Container"
-        android:layout_width="350dp"
-        android:layout_height="80dp"
-        android:background="@drawable/corners_search_view"
-        android:backgroundTint="#D8D8D8"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.571">
-
-        <!-- Conteúdo do restaurante 2 -->
-        <ImageView
-            android:id="@+id/restaurant2Image"
-            android:layout_width="130dp"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/restaurante1" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="8dp">
-
-            <TextView
-                android:id="@+id/restaurant2Name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Divino Pratão"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/restaurant2Rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4.5"
-                android:textColor="#FFC107"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/restaurant3Container"
-        android:layout_width="350dp"
-        android:layout_height="80dp"
-        android:background="@drawable/corners_search_view"
-        android:backgroundTint="#D8D8D8"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.706">
-
-        <!-- Conteúdo do restaurante 3 -->
-        <ImageView
-            android:id="@+id/restaurant3Image"
-            android:layout_width="130dp"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/restaurante1" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="8dp">
-
-            <TextView
-                android:id="@+id/restaurant3Name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Rangoo"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/restaurant3Rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4.7"
-                android:textColor="#FFC107"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/restaurant4Container"
-        android:layout_width="350dp"
-        android:layout_height="80dp"
-        android:background="@drawable/corners_search_view"
-        android:backgroundTint="#D8D8D8"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.841">
-
-        <!-- Conteúdo do restaurante 4 -->
-        <ImageView
-            android:id="@+id/restaurant4Image"
-            android:layout_width="130dp"
-            android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/restaurante1" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:padding="8dp">
-
-            <TextView
-                android:id="@+id/restaurant4Name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Cuccina de la nonna"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/restaurant4Rating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="4.2"
-                android:textColor="#FFC107"
-                android:textSize="16sp" />
-
-        </LinearLayout>
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/btnProfilePage"
@@ -277,6 +76,17 @@
         app:layout_constraintVertical_bias="0.045">
 
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewRestaurants"
+        android:layout_width="352dp"
+        android:layout_height="410dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.884" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
