--- a/TableTime/app/src/main/res/layout/activity_login.xml
+++ b/TableTime/app/src/main/res/layout/activity_login.xml
@@ -65,7 +65,7 @@
         app:layout_constraintVertical_bias="0.146" />
 
     <Button
-        android:id="@+id/buttonCriarConta"
+        android:id="@+id/buttonLogin"
         android:layout_width="308dp"
         android:layout_height="48dp"
         android:layout_marginTop="24dp"
@@ -82,7 +82,7 @@
         android:id="@+id/textViewNaoConta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ainda nÃ£o possui conta?"
+        android:text="Ainda não possui conta?"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -91,7 +91,7 @@
         app:layout_constraintVertical_bias="0.866" />
 
     <Button
-        android:id="@+id/buttonLogin"
+        android:id="@+id/buttonCriarConta"
         android:layout_width="299dp"
         android:layout_height="46dp"
         android:backgroundTint="#000000"
@@ -131,5 +131,9 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.266" />
 
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
