--- a/TableTime/app/src/main/res/layout/activity_homepage.xml
+++ b/TableTime/app/src/main/res/layout/activity_homepage.xml
@@ -24,10 +24,11 @@
         app:layout_constraintVertical_bias="0.041" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/helloUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Olá, Gonçalo!"
+        android:text=""
+        android:textAlignment="viewStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.085"
