Funcionalidade de apagar reservas

--- a/TableTime/app/src/main/res/layout/card_reserva.xml
+++ b/TableTime/app/src/main/res/layout/card_reserva.xml
@@ -58,7 +58,7 @@
         app:srcCompat="@android:drawable/ic_menu_myplaces" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/btnDeleteReserva"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:background="#DF1919"
