--- a/TableTime/app/src/main/res/layout/activity_confirm_reserve_selected_restaurant.xml
+++ b/TableTime/app/src/main/res/layout/activity_confirm_reserve_selected_restaurant.xml
@@ -23,7 +23,7 @@
 
     <ImageView
         android:id="@+id/imageViewRestauranteSelecionado"
-        android:layout_width="410dp"
+        android:layout_width="match_parent"
         android:layout_height="215dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nome do Restaurante Selecionado"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -160,7 +160,8 @@
         android:layout_width="296dp"
         android:layout_height="50dp"
         android:backgroundTint="#000000"
-        android:text="Confirmar"
+        android:text="CONFIRMAR"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
@@ -187,7 +188,8 @@
         android:layout_width="298dp"
         android:layout_height="50dp"
         android:backgroundTint="#FF0000"
-        android:text="Voltar"
+        android:text="VOLTAR"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
