--- a/TableTime/app/src/main/res/layout/activity_conta_informacoes.xml
+++ b/TableTime/app/src/main/res/layout/activity_conta_informacoes.xml
@@ -117,8 +117,9 @@
         android:layout_width="340dp"
         android:layout_height="50dp"
         android:backgroundTint="#000000"
-        android:text="Terminar Sessão"
+        android:text="TERMINAR SESSÃO"
         app:iconTint="#FF0000"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
